# GToTree

./: .gitignore  CHANGELOG.md  GToTree  README.md  conda-env.yaml  conda-setup.sh  conda-var-setup.sh  conftest.py  dev-setup.sh  gtotree-conda-env.yaml  gtotree-runlog.txt  gtt-gen-SCG-HMMs  notes.txt  pyproject.toml  setup.py  tmp-tax_derep.py  update-conda-package.sh
.github/workflows/: ci.yaml  probe-pfam-sizes.yaml  refresh-kofamscan-data.yaml  refresh-pfam-data.yaml  test-conda-installs.yaml  test-conda-installs.yml  test-full-run.yml
ToL_example/: GToTree_ToL_accessions  run_log
ToL_example/results/: Genomes_removed_for_too_few_hits.tsv  NCBI_genomes_summary_info.tsv  ToL_aligned_SCGs.faa  ToL_aligned_SCGs_mod_names.faa  ToL_aligned_SCGs_mod_names.tre  ToL_all_genomes_summary_info.tsv
conda-recipe/: build.sh  gtotree-tab-completion.sh  meta.yaml  post-link.sh  pytest.ini
docs/: _config.yml
example_run/: alteromonas_refseq_accessions.txt  fasta_files.txt  genbank_files.txt  genome_to_id_map.tsv  run_log.txt
example_run/Alteromonas_example/: Aligned_SCGs.faa  Aligned_SCGs_mod_names.faa  Aligned_SCGs_mod_names.tre  All_genomes_SCG_hit_counts.tsv  All_genomes_summary_info.tsv  Fasta_genomes_summary_info.tsv  Genbank_genomes_summary_info.tsv  Genomes_with_questionable_redundancy_estimates.tsv  NCBI_genomes_summary_info.tsv  Partitions.txt  gtotree-runlog.txt
gtotree/: main.py
gtotree/cli/: common.py  data.py  gtt.py  helpmenu.py  main.py  parser.py
gtotree/main_stages/: additional_ko_searching.py  additional_pfam_searching.py  aligning_and_preparing_SCG_sets.py  concatenating_SCG_sets.py  filtering_genes.py  filtering_genomes.py  hmm_searching.py  preprocessing_genomes.py  treeing.py  updating_headers.py
gtotree/smk/: align-and-prepare-SCG-sets.smk  filter-genes.smk  filter-genomes.smk  preprocess-amino-acid-files.smk  preprocess-fasta-files.smk  preprocess-genbank-files.smk  preprocess-ncbi-accessions.smk  process-ncbi-accessions.smk  search-hmms.smk  search-kos.smk  search-pfams.smk
gtotree/stages/: aligning_and_preparing_SCG_sets.py  concatenating_SCG_sets.py  preprocessing_genomes.py  treeing.py
gtotree/tests/: smoke.py  test_smoke.py
gtotree/utils/: aligning_and_preparing_SCG_sets.py  aligning_and_preparing_genesets.py  citations.py  concatenating_SCG_sets.py  context.py  data_locations.py  filtering_genes.py  filtering_genomes.py  general.py  genome_processing.py  hmm_handling.py  itol.py  messaging.py  preflight_checks.py  preprocessing_genomes.py  processing_genomes.py  runinfo.py  seqs.py  summary_info.py  tree_program_handling.py  updating_headers.py
hmm_sets/: Bacteria_and_Archaea.hmm  Universal.hmm  Universal_Hug_et_al.hmm  hmm-sources-and-info.tsv  hmm_sources_and_info.tsv
test_data/: GCA_900473895.1_N32_genomic.gbff  GCF_000020585.3_ASM2058v3_protein.faa  amino_acid_files.txt  clean_after_test.sh  example_run_log  fasta_files.txt  genbank_files.txt  genome_to_id_map.tsv  ncbi_accessions.txt  ncbi_accessions2.txt  pfam_targets.txt  test_log.txt  test_pfam_search_run_log.txt  test_run_log.txt  wanted_ids.tsv
tmp-testing/: amino_acid_files.txt  fasta_files.txt  genbank_files.txt  ncbi-accessions.txt
(+63 files in other folders)
