[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtotree"
version = "2.0.0"
description = "A user-friendly workflow for phylogenomics"
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "AstrobioMike", email = "Michael.Lee0517@gmail.com" }]
urls = { Repository = "https://github.com/astrobiomike/gtotree" }
# dependencies handled by conda installation

# [tool.setuptools]
# packages = { find = { where = ["."], include = ["gtotree*"] } }
# include-package-data = true

[tool.setuptools.packages.find]
include = ["gtotree*"]

# [tool.setuptools.package-data]
# gtotree = ["tests/data/*", "smk/*.smk"]

[project.scripts]
gtotree = "gtotree.main:main"
GToTree = "gtotree.main:main" # this doesn't tab-complete on mac, as mac is case-insensitive,
                              # but it still works if people type it that way so I'm keeping it here for legacy reasons


# data-related (`gtt data` subcommands eventually)
gtt-data-locations = "gtotree.utils.data_locations:main"
gtt-get-kofamscan-data = "gtotree.utils.ko.get_kofamscan_data:main"
gtt-get-pfam-data = "gtotree.utils.pfam.get_pfam_data:main"
gtt-get-ncbi-assembly-data = "gtotree.utils.ncbi.get_ncbi_assembly_data:main"
gtt-get-ncbi-tax-data = "gtotree.utils.ncbi.get_ncbi_tax_data:main"
gtt-get-gtdb-data = "gtotree.utils.gtdb.get_gtdb_data:main"

# `gtt` subcommands eventually
gtt-get-accs-from-gtdb = "gtotree.utils.gtdb.get_accessions_from_gtdb:main"
gtt-hmms = "gtotree.utils.hmms.gtt_hmms:main"
gtt-midpoint-root-tree = "gtotree.utils.helper_scripts.gtt_midpoint_root_tree:main"
gtt-test = "gtotree.tests.smoke:main"


[tool.pytest.ini_options]
testpaths = ["gtotree/tests"]
addopts = [
    "--cov",
    "--cov-context=test",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
source = ["gtotree"]
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
